--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="header-content">
                 <div class="profile-section">
                     <div class="profile-image">
-                        <img src="https://images.pexels.com/photos/2182970/pexels-photo-2182970.jpeg?auto=compress&cs=tinysrgb&w=400&h=400&fit=crop" alt="Jesus Cordoba - Professional Headshot" />
+                        <img src="assets/img/profile.jpg" alt="Jesus Cordoba - Professional Headshot" width="400" height="711" />
                     </div>
                     <div class="profile-info">
                         <h1 class="name">Jesus Cordoba</h1>
