--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                 <div class="section-content">
                     <h3 class="section-title">Certifications & Professional Credentials</h3>
                     <ul class="certifications-list">
+                        <li>Bachelor of Science in Computer Engineering from Instituto Tecnológico de Cancun, Mexico</li>
                         <li>Artificial Intelligence for Leaders - University of Texas at Austin</li>
                         <li>Project Management Professional (PMP) - PMI</li>
-                        <li>Business Process Design - MIT</li>
+                        <li>Business Process Design - MIT - Massachusetts Institute of Technology</li>
                         <li>Data Science - HarvardX</li>
                         <li>ITSM/ITIL V4/ITOM Certified</li>
                     </ul>
