--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jesus Cordoba - Technology Executive & Strategic IT Leader</title>
-    <meta name="description" content="Jesus Cordoba is a transformational technology executive with over 15 years of proven leadership in designing, securing, and scaling enterprise infrastructure across global fintech and regulated environments.">
+    <meta name="description" content="Jesus Cordoba is a transformational technology executive who drives organizational success through innovative infrastructure solutions and strategic leadership across global fintech and regulated environments.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -50,59 +50,82 @@
             <section class="section">
                 <div class="section-content">
                     <p class="executive-summary">
-                        Jesus Cordoba is a transformational technology executive with over 15 years of proven leadership in designing, securing, and scaling enterprise infrastructure across global fintech and regulated environments. Currently serving as Director of Technology Executive IT Operations at Pavilion Payments, Jesus has established himself as a strategic leader who consistently drives business value through innovative technology solutions and operational excellence.
+                        Jesus Cordoba is a transformational technology executive who drives organizational success through innovative infrastructure solutions and strategic leadership. With over 15 years of proven expertise across global fintech and regulated environments, he specializes in building high-performance teams, securing enterprise systems, and delivering measurable business value through technology excellence.
                     </p>
                 </div>
             </section>
 
-            <!-- Executive Leadership & Strategic Vision -->
+            <!-- Professional Mission -->
             <section class="section">
                 <div class="section-content">
-                    <h3 class="section-title">Executive Leadership & Strategic Vision</h3>
+                    <h3 class="section-title">Professional Mission</h3>
                     <p>
-                        As a security-driven IT leader, Jesus has built and led global teams of 50+ professionals, establishing comprehensive IT security programs and integrating DevSecOps practices across multinational organizations. His strategic approach to technology leadership includes direct partnership with C-level executives (CIO, COO, CEO) to shape organizational direction, translating complex technical initiatives into measurable business outcomes and ROI.
-                    </p>
-                    <p>
-                        Jesus excels at transforming IT from a cost center into a true business enabler through automation, zero-trust frameworks, FinOps disciplines, and full lifecycle program governance. His expertise in aligning CAPEX and OPEX planning with business objectives has resulted in the successful execution of multi-million-dollar technology initiatives that drive competitive advantage.
+                        Jesus is dedicated to transforming organizations through technology leadership that bridges the gap between innovation and business outcomes. His core mission centers on building resilient, secure technology foundations that enable companies to scale, compete, and thrive in rapidly evolving markets while maintaining the highest standards of security and operational excellence.
                     </p>
                 </div>
             </section>
 
-            <!-- Operational Excellence & Innovation -->
+            <!-- Leadership Philosophy & Strategic Approach -->
             <section class="section">
                 <div class="section-content">
-                    <h3 class="section-title">Operational Excellence & Innovation</h3>
+                    <h3 class="section-title">Leadership Philosophy & Strategic Approach</h3>
                     <p>
-                        Throughout his distinguished career, Jesus has demonstrated exceptional capability in building world-class engineering organizations and driving continuous innovation. At Planet Payment, he directed global engineering teams across multiple continents, spearheading digital transformation initiatives and streamlining complex workflows through process digitization and system integration.
+                        As a security-first technology leader, Jesus believes that exceptional IT leadership requires both visionary thinking and operational precision. His approach combines strategic partnership with C-level executives, comprehensive risk management, and a commitment to transforming IT from a support function into a true business enabler.
                     </p>
                     <p>
-                        His operational excellence is evidenced by achievements including reducing P1 incident response times by 35% while maintaining 99.99% uptime, implementing comprehensive ITSM frameworks, and establishing zero-trust network architectures that protect critical payment infrastructure. Jesus has successfully aligned global business continuity, disaster recovery, and patch management programs with NIST and ISO 27001 best practices.
+                        His leadership philosophy emphasizes empowering global teams through clear governance frameworks, fostering innovation through automation and emerging technologies, and maintaining unwavering focus on delivering ROI from technology investments. Jesus consistently demonstrates that the most successful technology initiatives are those that align seamlessly with business objectives while anticipating future organizational needs.
                     </p>
                 </div>
             </section>
 
-            <!-- Industry Expertise & Technical Mastery -->
+            <!-- Proven Track Record of Excellence -->
             <section class="section">
                 <div class="section-content">
-                    <h3 class="section-title">Industry Expertise & Technical Mastery</h3>
+                    <h3 class="section-title">Proven Track Record of Excellence</h3>
                     <p>
-                        Jesus brings deep expertise across regulated industries, with particular strength in fintech, hospitality, and payment processing environments. His technical leadership spans cloud infrastructure, cybersecurity, DevOps automation, and enterprise systems engineering. He has successfully executed international projects across Latin America, the Caribbean, and North America, demonstrating exceptional cross-cultural leadership and multilingual project execution capabilities.
+                        Throughout his distinguished career, Jesus has established a reputation for delivering exceptional results in complex, regulated environments. His operational achievements include reducing critical incident response times by 35% while maintaining 99.99% system uptime, successfully managing multi-million-dollar technology budgets, and implementing comprehensive zero-trust security architectures that protect critical payment infrastructure.
                     </p>
                     <p>
-                        His comprehensive understanding of modern IT disciplines includes PLM systems, observability platforms, vendor management, and contract negotiation. Jesus consistently leverages cutting-edge technologies to drive digital transformation while maintaining the highest security and compliance standards.
+                        At the helm of global engineering organizations, Jesus has directed teams of 50+ professionals across multiple continents, spearheading digital transformation initiatives that streamline operations and drive competitive advantage. His expertise in integrating DevSecOps practices, establishing comprehensive ITSM frameworks, and aligning business continuity programs with industry standards (NIST, ISO 27001) has consistently resulted in enhanced organizational resilience and operational efficiency.
                     </p>
                 </div>
             </section>
 
-            <!-- Education & Professional Development -->
+            <!-- Technical Excellence & Innovation Leadership -->
             <section class="section">
                 <div class="section-content">
-                    <h3 class="section-title">Education & Professional Development</h3>
+                    <h3 class="section-title">Technical Excellence & Innovation Leadership</h3>
                     <p>
-                        Jesus demonstrates a commitment to continuous learning and staying at the forefront of technology innovation. He holds a <strong>Postgraduate Degree in Artificial Intelligence</strong> from The University of Texas at Austin (2023-2024), where he developed advanced expertise in neural networks, deep learning, natural language processing, and computer vision.
+                        Jesus brings comprehensive expertise across modern technology disciplines, with particular strength in cloud infrastructure, cybersecurity, enterprise systems engineering, and emerging technologies. His technical leadership encompasses PLM systems, observability platforms, FinOps optimization, and advanced automation solutions that drive both efficiency and security.
                     </p>
                     <p>
-                        His educational foundation includes advanced executive training from prestigious institutions: a <strong>Certificate in Business Process Design for Strategic Management</strong> from MIT, <strong>Data Science</strong> coursework from Harvard University (HarvardX), and a <strong>Bachelor of Science in Computer Engineering</strong> from Instituto Tecnológico de Cancun.
+                        His commitment to staying at the forefront of technology innovation is evidenced by his recent completion of a Postgraduate Degree in Artificial Intelligence from The University of Texas at Austin, where he developed advanced expertise in neural networks, deep learning, and computer vision. This forward-thinking approach positions him uniquely to guide organizations through the next wave of technological transformation.
+                    </p>
+                </div>
+            </section>
+
+            <!-- Global Perspective & Cross-Cultural Leadership -->
+            <section class="section">
+                <div class="section-content">
+                    <h3 class="section-title">Global Perspective & Cross-Cultural Leadership</h3>
+                    <p>
+                        With extensive experience managing international projects across Latin America, the Caribbean, and North America, Jesus brings valuable global perspective to technology leadership. His multilingual capabilities (English/Spanish) and proven success in diverse cultural environments enable him to build effective teams and execute complex initiatives across geographical boundaries.
+                    </p>
+                    <p>
+                        His comprehensive understanding of regulated industries—including fintech, hospitality, and payment processing—provides deep insight into compliance requirements, risk management protocols, and the unique technology challenges facing global organizations in heavily regulated sectors.
+                    </p>
+                </div>
+            </section>
+
+            <!-- Educational Foundation & Professional Development -->
+            <section class="section">
+                <div class="section-content">
+                    <h3 class="section-title">Educational Foundation & Professional Development</h3>
+                    <p>
+                        Jesus maintains a strong commitment to continuous learning and professional excellence. His educational achievements include advanced executive training from world-renowned institutions: MIT (Business Process Design for Strategic Management), Harvard University (Data Science), and The University of Texas at Austin (Artificial Intelligence), complemented by his foundational Bachelor of Science in Computer Engineering.
+                    </p>
+                    <p>
+                        His professional certifications span critical technology leadership areas, including Project Management Professional (PMP), ITSM/ITIL V4/ITOM, and specialized AI leadership credentials, demonstrating his commitment to maintaining expertise across evolving technology domains.
                     </p>
                 </div>
             </section>
@@ -110,7 +133,7 @@
             <!-- Certifications -->
             <section class="section">
                 <div class="section-content">
-                    <h3 class="section-title">Certifications & Professional Credentials</h3>
+                    <h3 class="section-title">Professional Certifications & Credentials</h3>
                     <ul class="certifications-list">
                         <li>Bachelor of Science in Computer Engineering from Instituto Tecnológico de Cancun, Mexico</li>
                         <li>Artificial Intelligence for Leaders - University of Texas at Austin</li>
@@ -122,39 +145,36 @@
                 </div>
             </section>
 
-            <!-- Vision for Executive Leadership -->
+            <!-- Core Value Proposition -->
             <section class="section">
                 <div class="section-content">
-                    <h3 class="section-title">Vision for Executive Leadership</h3>
+                    <h3 class="section-title">Core Value Proposition</h3>
                     <p>
-                        Jesus is actively pursuing senior executive opportunities as a Vice President of Technology or C-suite IT leader where he can leverage his proven track record of building high-performance teams, driving digital transformation, and delivering measurable business results. His unique combination of strategic vision, operational expertise, and emerging technology knowledge positions him as an ideal candidate for organizations seeking transformational technology leadership.
-                    </p>
-                    <p>
-                        With fluency in both English and Spanish, Jesus brings valuable cultural competency and global perspective to executive roles, having successfully managed diverse teams and complex international initiatives throughout his career.
+                        Jesus represents the evolution of technology leadership—combining deep technical expertise with strategic business acumen, global perspective with local execution excellence, and innovative thinking with practical implementation. His proven ability to transform IT organizations, drive digital initiatives, and deliver consistent business value makes him a trusted advisor and strategic partner in any technology-driven organization.
                     </p>
                 </div>
             </section>
 
-            <!-- Core Competencies -->
+            <!-- Areas of Expertise -->
             <section class="section competencies-section">
                 <div class="section-content">
-                    <h3 class="section-title">Core Competencies</h3>
+                    <h3 class="section-title">Areas of Expertise</h3>
                     <div class="competencies-grid">
                         <div class="competency-category">
                             <h4 class="competency-title">Strategic Leadership</h4>
-                            <p class="competency-items">C-Level Stakeholder Engagement • Technology Executive Leadership • Cross-Functional Leadership • Organizational Agility • AI Strategy</p>
+                            <p class="competency-items">Technology Executive Leadership • C-Level Partnership • Cross-Functional Collaboration • Organizational Transformation • AI Strategy Development</p>
                         </div>
                         <div class="competency-category">
                             <h4 class="competency-title">Operational Excellence</h4>
-                            <p class="competency-items">ITSM/ITIL V4/ITOM • Business Continuity & Disaster Recovery • Engineering Team Leadership • Continuous Improvement Initiatives • Multilingual Project Execution</p>
+                            <p class="competency-items">Global Team Leadership • ITSM/ITIL V4/ITOM • Business Continuity & Disaster Recovery • Continuous Improvement • International Project Management</p>
                         </div>
                         <div class="competency-category">
-                            <h4 class="competency-title">Financial Management</h4>
-                            <p class="competency-items">CAPEX/OPEX Planning & Budget Ownership • FinOps & Cloud Cost Optimization • Multi-year Investment Planning • Vendor Management & Contract Negotiation</p>
+                            <h4 class="competency-title">Financial Stewardship</h4>
+                            <p class="competency-items">CAPEX/OPEX Strategic Planning • FinOps & Cloud Cost Optimization • Multi-year Technology Investment • Vendor Management & Contract Negotiation</p>
                         </div>
                         <div class="competency-category">
-                            <h4 class="competency-title">Technology & Innovation</h4>
-                            <p class="competency-items">Artificial Intelligence • Cloud Infrastructure • DevOps Automation • Digital Transformation • Systems Engineering • PLM (Product Lifecycle Management) • Observability</p>
+                            <h4 class="competency-title">Technology Innovation</h4>
+                            <p class="competency-items">Artificial Intelligence • Cloud Infrastructure • DevSecOps Automation • Digital Transformation • Enterprise Systems Engineering • Product Lifecycle Management</p>
                         </div>
                     </div>
                 </div>
@@ -165,7 +185,7 @@
         <footer class="footer">
             <div class="footer-content">
                 <p class="footer-text">
-                    Jesus Cordoba is available for senior executive opportunities and strategic consulting engagements.
+                    For strategic technology leadership opportunities and executive consulting engagements.
                 </p>
                 <div class="footer-contact">
                     <a href="mailto:jesus.cordoba@icloud.com" class="footer-link">jesus.cordoba@icloud.com</a>
