--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <ul class="certifications-list">
                         <li>Bachelor of Science in Computer Engineering from Instituto Tecnológico de Cancun, Mexico</li>
                         <li>Artificial Intelligence for Leaders - University of Texas at Austin</li>
-                        <li>Professional Project Management Professional (PMP)® | PMI</li>
+                        <li>Project Management Professional (PMP)® | PMI</li>
                         <li>Business Process Design - MIT - Massachusetts Institute of Technology</li>
                         <li>Data Science - HarvardX</li>
                         <li>ITSM/ITIL V4/ITOM Certified</li>
